--- a/Latex-FinalProject/document.tex
+++ b/Latex-FinalProject/document.tex
@@ -29,7 +29,7 @@
 	\textbf{Faculty of Engineering and Information Technology}}\vspace{2cm}
 	\\
 	
-	\textbf{{\Huge Patient Traker}}\vspace{1cm}}
+	\textbf{{\Huge Patient Tracker}}\vspace{1cm}}
 \author{\textbf{By}
 	\\\\
 	Hanna Odeh\qquad \qquad \quad
@@ -65,13 +65,13 @@
 		\textbf{DEDICATION}\\
 		\begin{center}
 		\end{center}
-		First of all, we dedicate this graduation project to my parents, who endured all pains to make my dreams come true, and helped me to be here.
+		First of all, we dedicate this graduation project to our parents, who endured all pains to make our dreams come true, and helped us to be here.
 		
-		To my supervisor Ms.Rihabb Al-Salameen who gave me all her efforts to complete this work.
+		To our supervisor Ms.Rihabb Al-Salameen who gave us all her efforts to complete this work.
 		
-		To my best friends everywhere. To my brothers and sisters.
+		To our best friends everywhere. To our brothers and sisters.
 		
-		To all my teachers in my life.
+		To all our teachers in our life.
 		
 		Love you all.
 	\end{center}
@@ -80,7 +80,7 @@
 		\textbf{ACKNOWLEDGMENT}\\
 		\begin{center}
 		\end{center}
-		First of all, we are grateful to the Almighty God for making me the person we are today and He who gave me the strength and power to complete my mission.
+		First of all, we are grateful to the Almighty God for making us the people we are today and giving us the strength and power to complete our mission.
 		
 		We would like to express our deepest appreciation to our parents, who prayed for us.
 		
@@ -94,8 +94,8 @@
 	\begin{abstract}
 		Many people suffer from diseases that can cause them additional and serious harm, for instance: Alzheimer patients with late stages may often forget their location, Hypoglycemic patients may have a sudden seizure where they immediately need suger and a piece of chocolate may save their lives, so our team is working on helping them by developing a Patient tracker (PT).\\
 		
-		 The proposed project is a mobile aplication for tracking location of patients. The purpose of the project is to improve patient care by providing real-time data on the location and health status of patients. The project will utilize GPS technology to track the location of the patient, and will also include features such as tracking vital signs and medication adherence.
-		The project aims to reduce the workload of healthcare providers by automating the tracking and monitoring of patients. It will also provide patients with the ability to track their own health through the use of the mobile app. we will use the incremental agile methodology, which is well-suited for our system.\\
+		 The proposed project is a mobile aplication for tracking location of patients. The purpose of the project is to improve patient care by providing real-time data on the location and health status of patients. The project will utilize GPS technology to track the location of the patient, and will also include features such as tracking vital signs (Blood presure, Oxygen saturation, Blood gloucose level, Heart rate, Insulin level) and medication adherence.
+		The patient tracker app aims to help the healthcare providers and  tracks of patients. It will also provide patients with the ability to track their own health through the use of the mobile app. we will use the incremental agile methodology, which is well-suited for our system.\\
 		
 	\end{abstract}
 	\newpage
@@ -112,9 +112,9 @@
 		    
 			\quad In light of the remarkable progress of technology and the high rate of technology uses, many become dependent on technology, so much so that some of us can no longer manage or even get by without our phone, so we have decided to create a mobile app to help patients with some diseases that may cause additional harm, such as Alzheimer's and Diabetes.\\
 			
-			Patient tracker App technology is a rapidly evolving field that has the potential to transform the way that healthcare is delivered. These devices are designed to track the location and movements of patients in real time, using GPS or other location-based technologies, and may also have the capability to collect and transmit data about the patient's health, such as vital signs or activity levels. By connecting a patient tracker app with another mobile app such as Apple Watch, patients can access their health data and track their health and well-being in real-time, while also providing healthcare providers with valuable insights into their health status. In addition to tracking the location and health of patients, the patient tracker App can store and share medical records with patients, their families, and healthcare providers. This can help to ensure that all stakeholders have access to the most up-to-date and accurate information about the patient's health, and can facilitate more informed and collaborative decision-making about the patient's care.\\
+			Patient tracker App technology is a rapidly evolving field that has the potential to transform the way that healthcare is delivered. These devices are designed to track the location and movements of patients in real time, using GPS (Google Maps), and may also have the capability to collect and transmit data about the patient's health, such as Blood presure, Oxygen saturation, Blood gloucose level, Heart rate and Insulin level. By downloading the patient tracker app on the healthcare's devices such as desktops, laptops, tablets or mobiles also, on patient's and family member mobiles and collecting the data of the vital signs from the apple watches, patients can access their health data and track their health and well-being in real-time, while also providing healthcare providers with valuable insights into their health status. In addition to tracking the location and health of patients, the patient tracker App can store and share medical records with patients, their families, and healthcare providers. This can help to ensure that all stakeholders have access to the most up-to-date and accurate information about the patient's health, and can facilitate more informed and collaborative decision-making about the patient's care.\\
 			
-			this project will benefit the medical and technology researchers sector, so after the project will be done and known this will help researchers to make extensive research about this. Trackers can provide real-time data on a patient's location and vital signs, which can help healthcare providers to respond more quickly to any changes in a patient's condition. also, Trackers can enable healthcare providers to communicate more effectively with patients, for example by sending reminders about appointments or medication and alerting healthcare providers if a patient has not taken their medication as prescribed.\\
+			this project will benefit the medical and technology researchers sector, so after the project will be done and known this will help researchers to make extensive research about this. Trackers can provide real-time data on a patient's location and vital signs, which can help healthcare providers to respond more quickly to any changes in a patient's condition. also, Trackers can enable healthcare providers to communicate more effectively with patients, for example by sending reminders about appointments or medication and Alerting the family member and the patient to take medications relative to the medication schedule set by the doctor.\\
 			
 
 		\subsection{Literature Review}
@@ -156,7 +156,7 @@
 			 	\end{tabular}
 			 \end{table}
 		 	\newpage
-		 	Our project is specifically focused on the Bethlehem area, whereas the studies listed in the table have a wider geographical focus. This means that our project will be tailored to the specific needs and concerns of the Bethlehem community, which may differ from those of other communities. Additionally, our project will incorporate additional features and functionality that are not present in the studies listed in the table. For example, our project may include features such as real-time alerts for patients and caregivers, or integration with local healthcare resources and services. Overall, our project aims to provide a unique and comprehensive solution for the Bethlehem community that addresses the specific needs and concerns of patients, caregivers, and healthcare providers in the area.\\
+		 	Patient Tracker App is specifically focused on the Bethlehem area, whereas the studies listed in the table have a wider geographical focus. This means that PT will be tailored to the specific needs and concerns of the Bethlehem community, which may differ from those of other communities. Additionally, PT will incorporate additional features and functionality that are not present in the studies listed in the table. For example, PT may include features such as real-time alerts for patients and caregivers, or integration with local healthcare resources and services. Overall, PT aims to provide a unique and comprehensive solution for the Bethlehem community that addresses the specific needs and concerns of patients, caregivers, and healthcare providers in the area.\\
 		\subsection{Project Scope}
 			\quad The scope of the patient tracker project in Bethlehem is to improve the management of patients with chronic conditions, enhance the efficiency of healthcare delivery, and improve communication and collaboration between patients, doctors, and other healthcare providers. The project aims to provide real-time tracking of patients’ locations and health status, as well as store and share medical records and other important information. This will benefit both doctors and patients by enabling more timely and effective care, as well as providing patients with greater control and autonomy over their health. In addition, the project will benefit the medical sector by providing valuable insights and data that can inform research and improve the quality of care for all patients.\\
 			
@@ -165,8 +165,8 @@
 			\begin{itemize}
 				\item This system depends on or works on hosting services for the medical sector, patients, and their families that suffer, such as tracking and locating the patient's current place, viewing the patient’s illness record, checking his bumps and oxygen, sending notifications and alarming,  etc. 
 				\item As it will allow patients with their families to access the app, So first they must register to create a personal account that will be informed by the medical ministry to insure that they are allowed to use this app and the sensitive information or not, it will be registering an ID number, first name, last name, date of birth, gender, place of birth, email, password, personal phone number, their location or their place of residence, two of patient’s relative name and contact information to keep them in touch, that information are all required to fill in their registration form, this system will allow changing or updating some information such as phone number and place of residence. 
-				\item After all, they will officially have a personal account on our app, where the citizen will log in by using their id number and password, then the user will be allowed to visit the record and check the locations and the measures of vital reactions. 
-				This app will be available 24 hours, all the time, and anywhere the user goes.
+				\item After all, they will officially have a personal account on our application, where the citizen will log in with the ID number and password, and then allow the user to visit the registry, and check the sites and biometrics. 
+				This application will be available 24 hours, all the time, in case the patient lost network connection then his last location will be saved and an alert will be sent to the family member  with the last location where he was.
 			\end{itemize}
 		
 			\begin{center}
@@ -181,9 +181,9 @@
 
 		\subsection{Problem Statement}
 			
-			\quad There is a lack of effective methods for healthcare providers to monitor and track the location and health status of patients in real-time, particularly those with chronic conditions or cognitive impairments. This can lead to poor health outcomes and high healthcare costs, as well as difficulties in providing timely care in emergencies, for instance Hypoglycemic patients may have a sudden seizure where they immediately need sugar and a piece of chocolate may save their lives and Alzheimer patients with late stages may often forget their location.\\
+			\quad There is a lack of effective methods for healthcare providers to monitor and track the location and health status of patients in real-time. This can lead to poor health outcomes and high healthcare costs, as well as difficulties in providing timely care in emergencies, for instance diabetes patients may have a sudden seizure where they immediately need sugar and a piece of chocolate may save their lives and Alzheimer patients with late stages may often forget their location.\\
 			
-			PT aims to create a mobile application that helps patients and their families physically, psychologically, and socially, as it will reduce the number of injuries, danger, and deaths that patients may be exposed to, and it will reduce psychological anxiety and phobia The social status of patients and their families, by tracking the location and vitals of patients, displaying their health conditions, what they may be exposed to, and their medical records that will be stored in the application. Finally, it is important to address the privacy and security concerns surrounding the use of patient tracker technology by implementing appropriate safeguards and measures to protect the privacy and security of patient data. This may include obtaining consent from patients before collecting or sharing their data, implementing measures to encrypt and secure patient data, and ensuring that patient data is only accessed by authorized personnel. By addressing these concerns, it is possible to build trust and confidence in the use of patient tracker technology and to encourage more widespread adoption of these devices.
+			PT aims to create a mobile application that helps patients and their families physically, psychologically, and socially, as it will reduce the number of injuries, danger, and deaths that patients may be exposed to, and it will reduce psychological anxiety and phobia the social status of patients and their families, by tracking the location and vitals of patients, displaying their health conditions, what they may be exposed to, and their medical records that will be stored in the application. Finally, it is important to address the privacy and security concerns surrounding the use of patient tracker technology by implementing appropriate safeguards and measures to protect the privacy and security of patient data. This may include obtaining consent from patients before collecting or sharing their data, implementing measures to encrypt and secure patient data, and ensuring that patient data is only accessed by authorized personnel. By addressing these concerns, it is possible to build trust and confidence in the use of patient tracker technology and to encourage more widespread adoption of these devices.
 			
 		\subsection{Project Objectives}
 		The specific objectives of the PT system are as follows:
@@ -193,7 +193,7 @@
 			\item To improve the safety and security of patients, especially those with cognitive impairments, by providing location tracking and emergency alerts.
 			\item To improve the timeliness of care in emergency situations by providing real-time location tracking of patients.
 			\item To reduce healthcare costs by improving health outcomes and reducing the need for hospital visits or other costly interventions.
-			
+		
 		\end{enumerate}
 		\subsection{Project Benefits}
 			There are several potential benefits of using patient tracker technology and connecting it with a patient's medical record in the healthcare setting:
